# https://peps.python.org/pep-0517/
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

# https://peps.python.org/pep-0621/
[project]
name = "tweakpane"
description = "Python bindings for Tweakpane UI"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD 3-Clause License" }
authors = [
    { name = "Trevor Manz", email = "trevor.j.manz@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = [
    "anywidget"
]

[project.urls]
homepage = "https://github.com/manzt/tweakpane"
repository = "https://github.com/manzt/tweakpane"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
include-package-data = true
package-data = { "tweakpane" = ["index.js"] }
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }
zip-safe = false

# https://github.com/pypa/setuptools_scm/#pyprojecttoml-usage
[tool.setuptools_scm]
